force-app/main/default/objects/Assessment_Definition_Item_Choice__c/Assessment_Definition_Item_Choice__c.object-meta.xml
<CustomObject>
    <label>Assessment Definition Item Choice</label>
    <nameField>
        <displayFormat>IC-{00000}</displayFormat>
        <label>Assessment Definition Item Choice Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Definition Item Choices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>