force-app/main/default/objects/Assessment_Definition_Item_Choice__c/fields/Assessment_Definition_Item__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Definition_Item__c</fullName>
    <label>Assessment Definition Item</label>
    <referenceTo>Assessment_Definition_Item__c</referenceTo>
    <relationshipLabel>Assessment Definition Item Choices</relationshipLabel>
    <relationshipName>Assessment_Definition_Item_Choices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>