force-app/main/default/objects/Assessment_Definition_Item_Choice__c/fields/Assessment_Definition_Signal__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Definition_Signal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signal (On Selection)</label>
    <referenceTo>Assessment_Definition_Signal__c</referenceTo>
    <relationshipLabel>Assessment Definition Item Choices</relationshipLabel>
    <relationshipName>Assessment_Definition_Item_Choices</relationshipName>
    <type>Lookup</type>
</CustomField>