force-app/main/default/objects/Assessment_Definition_Item_Choice__c/fields/Next_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Next_Item_Name__c</fullName>
    <externalId>true</externalId>
    <label>Next Item Name (Override)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>