force-app/main/default/objects/Assessment_Definition_Item_Choice__c/validationRules/Assessment_Definition_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Assessment_Definition_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(Assessment_Definition__c) &amp;&amp;
Assessment_Definition__c !=  Assessment_Definition_Item__r.Assessment_Definition__c</errorConditionFormula>
    <errorMessage>Assessment Definition must match the parent item definition</errorMessage>
</ValidationRule>