force-app/main/default/objects/Assessment_Definition_Item_Choice__c/validationRules/Validate_Signal_Definition_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Signal_Definition_Parent</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK( Assessment_Definition_Signal__c ) &amp;&amp; Assessment_Definition__c !=  Assessment_Definition_Signal__r.Assessment_Definition__c</errorConditionFormula>
    <errorDisplayField>Assessment_Definition_Signal__c</errorDisplayField>
    <errorMessage>The selected signal must belong to the current Assessment Definition</errorMessage>
</ValidationRule>